# ollama_shell

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  FILE_CREATION_FIX.md  FILE_CREATION_IMPROVEMENTS_SUMMARY.md  FINE_TUNING_GUIDE.md  Makefile  README.md  README.md.bak  README_UPDATED_INSTALL.md  Ruger Alaskan Grip Installation Instructions.md  Start Ollama Shell.bat  Start Ollama Shell.command  Start Ollama Shell.sh  TESTING.md  agentic_assistant.py  agentic_assistant.py.20250317232225.bak  agentic_assistant.py.20250317232721.bak  agentic_assistant_enhanced.py  agentic_assistant_enhanced.py.safe.bak  agentic_assistant_enhanced.py.syntax.bak  agentic_assistant_enhanced_final_fix.py  agentic_assistant_enhanced_fix.py  agentic_assistant_enhanced_is_direct_fix.py  agentic_assistant_enhanced_updated.py  agentic_direct_patch.py  agentic_env_patch.py  agentic_mcp_integration.py  agentic_ollama.py  agentic_patch.py  assistant_cli.py  better_fix.py  cleanup_original_data.py  config.example.json  config.json  confluence_mcp_integration.py  create_directories.py  cyberdeck_search.py  debug_news_extraction.py  demo_filesystem_mcp.py  (+114 more)
.github/workflows/: ci.yml  pages.yml
backup_ollamaShell/: ollama_shell.py
datasets/Open-Platypus/: test.jsonl  valid.jsonl
docs/: agentic_guide.md  confluence_setup_guide.md  confluence_troubleshooting.md  index.html  jira_setup_guide.md  jira_troubleshooting.md
docs/legacy/: ASSISTANT_USAGE_GUIDE.md  CONTENT_GENERATION_INTEGRATION.md  FILESYSTEM_MCP_PROTOCOL.md  FILE_CREATION.md  FILE_CREATION_IMPROVEMENTS.md  IMPLEMENTATION_DETAILS.md  INTEGRATION_COMPLETE.md  README_ENHANCED.md  README_ENHANCED_ASSISTANT.md  SUMMARY.md  TASK_MANAGEMENT.md  task_classification_summary.md  task_management_improvements.md
examples/: confluence_example.py  create_sample_parquet.py  custom_workflow.py  dataset_converter.py  demo_file_creation.py  finetune_example.py  jira_example.py  sample_dataset.json  task_execution_demo.py  verify_improvements.py
finetune_modules/: README.md  __init__.py  dataset_utils.py  hardware_detection.py  manager.py  mlx_bridge.py  mlx_job_template.py  mlx_runner.py  mlx_runner_new.py  model_utils.py  scan_created_files.py  unsloth_runner.py  venv_utils.py
jobs/stemSeekCoder3/: Modelfile
jobs/stemSeekCoder3/model/: model_name.txt
jobs/stemllama/: Modelfile  run_finetune.py
jobs/stemllama/model/: model_name.txt
models/testModel/adapters/: adapter_config.json
oshell/: __init__.py  __main__.py  capabilities.py  cli.py  config.py  desktop.py  fun.py  knowledge.py  mcp.py  memory.py  session.py
oshell/agent/: __init__.py  events.py  loop.py
oshell/browser/: __init__.py  controller.py
oshell/finetune/: __init__.py  cli.py  datasets.py  hardware.py  manager.py  mlx_runner.py
oshell/gui/: __init__.py  controller.py
oshell/integrations/: __init__.py  atlassian.py
oshell/providers/: __init__.py  base.py  ollama.py  openai_compat.py
oshell/tools/: __init__.py  atlassian.py  base.py  browser.py  builtins.py  documents.py  gui.py  knowledge.py  memory.py  shell_session.py  system.py  web.py
oshell/tui/: __init__.py  ambient.py  app.py  dream.py  menu.py  overlay.py
scripts/: create_directories.py  install_filesystem_mcp.py  install_filesystem_mcp_protocol.py  install_filesystem_mcp_python.py  install_filesystem_mcp_simple.py  reset_job.py
tests/: conftest.py  test_agent.py  test_ambient.py  test_atlassian.py  test_browser.py  test_capabilities.py  test_cli.py  test_config.py  test_desktop.py  test_documents.py  test_finetune.py  test_fun.py  test_gui.py  test_knowledge.py  test_mcp.py  test_memory.py  test_providers.py  test_session.py  test_system.py  test_tools.py  test_tui.py  test_tui_snapshot.py  test_web.py
tests/__snapshots__/test_tui_snapshot/: test_tui_layout_snapshot.raw
tests/legacy/: comprehensive_file_creation_test.py  quick_test_venv.py  simple_test.py  task_classification_test.py  test_agentic_search.py  test_atlassian_api.py  test_cnn_extraction.py  test_comprehensive_task_handling.py  test_confluence_setup.py  test_content_generation.py  test_enhanced_assistant.py  test_enhanced_extraction.py  test_enhanced_quick.py  test_enhanced_web_browsing.py  test_file_creation.py  test_filesystem_integration.py  test_filesystem_mcp.py  test_filesystem_mcp_protocol.py  test_jira_error_handling.py  test_js_extraction.py  test_mcp_browser.py  test_news_extraction.py  test_pat_confluence.py  test_search.py  test_simple.py  test_simple_file_creation.py  test_suite.py  test_task.py  test_task_management_fixes.py  test_task_manager.py
